resources/sass/app.scss
$base-color: #525252;
$active-color: #C35817;

// The following two lines import the default Sencha Touch theme. If you are building
// a new theme, remove them and the add your own CSS on top of the base CSS (which
// is already included in your app.json file).

@import 'sencha-touch/default';
@import 'sencha-touch/default/all';
// Examples of using the icon mixin:
// @include icon('user');
// Your custom code goes here...
@include sencha-button-ui('black_button', black, null);
@include icon('home');
@include icon('user');
@include icon('info');
@import 'scorm_panel';

// scorm reader icons
@include icon-font('IcoMoon', inline-font-files('icomoon/icomoon.woff', woff, 'icomoon/icomoon.ttf', truetype,'icomoon/icomoon.svg', svg));
@include icon('bullhorn', '\e600', 'icoMoon');
@include icon('bookmark', '\e000', 'icoMoon');
@include icon('leftarrow', '\e001', 'icoMoon');
@include icon('rightarrow', '\e002', 'icoMoon');
@include icon('marker', '\e003', 'icoMoon');

.appbar {
	opacity: 0.9;
	background-color: $base-color*0.5;
	-webkit-transition: right 0.5s;
	-moz-transition: right 0.5s;
	-o-transition: right 0.5s;
	transition: right 0.5s;	
	.app_bar_button {
		color: $base-color*0.5;
		border: 2px solid $base-color*0.5;
		background-color: $base-color*0.5;
		opacity: 1 !important;
		font-size: 27px;
	}
}

.version {
	color: gray;
	font-size: small;
	text-align: right;
	padding-right: 5px;
}

.x-navigationview-inner {
	-webkit-transition: margin-right 0.3s;
	-moz-transition: margin-right 0.3s;
	-o-transition: margin-right 0.3s;
	transition: margin-right 0.3s;	
}

.x-course,
.x-recent-activity,
.x-calendar-event,
.x-module,
.x-grade,
.x-folder-entry,
.x-forum-discussion {
	padding: 5px;
	border-bottom: 1px solid #dedede;
}

.x-course-section {
	background-color: white;
	padding-top: 10px;
	padding-left: 3px;
	border-bottom: 2px solid #dedede;
	.summary {
		margin-top: 10px;
		margin-bottom: 5px;
		font-size: small;
	}
}

.x-recent-activity-label {
	background-color: $base-color;
	color: white;
	padding-top: 10px;
	padding-bottom: 3px;
	padding-left: 3px;
	border-bottom: 2px solid #dedede;
}

.x-module,
.x-recent-activity,
.x-folder-entry {
	padding-top: 10px;
	padding-left: 35px;
}


.x-module-icon-choice,
.x-module-icon-assign,
.x-module-icon-assignment,
.x-module-icon-folder,
.x-module-icon-icon,
.x-module-icon-forum,
.x-module-icon-page,
.x-module-icon-scorm,
.x-module-icon-url {
}

.x-module-icon-assign {
	background:url('../images/assignment.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-assignment {
	background:url('../images/assignment.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-choice {
	background:url('../images/assignment.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-folder,
.x-subfolder-icon {
	background:url('../images/folder.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-file-icon {
	background:url('../images/file.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-forum {
	background:url('../images/forum.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-page {
	background:url('../images/page.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-scorm {
	background:url('../images/scorm.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-resource {
	background:url('../images/resource.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-url {
	background:url('../images/url.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-course-module-status,
.x-module-modname,
.x-forum-discussion-stat,
.x-folder-entry-mime {
	text-align: right;
	color: gray;
	font-size: small;
}

.x-grade-data {
	text-align: right;
	color: black;
	font-size: 1.1em;
}

.x-grade-is-passing-grade {
	color: green;
}

.x-grade-is-not-passing-grade {
	color: red;
}

.x-grade-passing-grade {
	color: gray;
	font-size: small;
}

.partecipant {
	border-bottom: 1px solid #dedede;
	background-color: white;
	padding: 5px;
	padding-top: 10px;
	padding-bottom: 7px;
}

.x-partecipant-firstname {
	margin-left: 5px;
	margin-right: 5px;
}

.x-partecipant-email {
	color: gray;
	font-size: small;
	margin-top: -10px;
	padding-left: 40px;
	margin-bottom: 7px;
}

.partecipant-selected {
	background-color: white;
}

.x-partecipant-contact-button {
	margin-top: 10px;
}

.x-calendar-event-timestart,
.x-calendar-event-timeduration {
	color: gray;
	font-size: small;
}

/*
 *
 * Forum related classes
 *
 * */

.x-forum-discussion {
	padding-top: 15px;
}

.forum-intro,
.forum-post {
	margin-bottom: 10px;
	border: 1px solid #dedede;
	padding: 5px;
}

.forum-post-selected {
	background-color: white;
}

.x-post-firstname {
	margin-left: 5px;
	margin-right: 5px;
}

.x-post-lastname {}

.x-post-subject {
	font-weight: bold;
	padding-top: 10px;
}

.x-post-message {
	padding-top: 10px;
	padding-bottom: 10px;
}

.x-post-indentation-0 {}

.x-post-indentation-1 {
	margin-left: 15px;
}

.x-post-indentation-2 {
	margin-left: 30px;
}

.x-post-indentation-3 {
	margin-left: 45px;
}

.x-post-indentation-4 {
	margin-left: 60px;
}

.x-post-indentation-5 {
	margin-left: 75px;
}

.x-post-indentation-6 {
	margin-left: 90px;
}

.x-post-indentation-7 {
	margin-left: 105px;
}

.x-post-indentation-8 {
	margin-left: 120px;
}

.x-post-indentation-9 {
	margin-left: 135px;
}

.x-post-indentation-10 {
	margin-left: 150px;
}

.x-post-attachment-list {
	padding-top: 15px;
}

.x-post-reply {
	.parent-post {
		background-color: white;
		padding: 5px;
		padding-top: 10px;
		padding-bottom: 10px;
		padding: 10px;
		.userinfo {
			margin-bottom: 10px;
		}

		.content {
			.subject {
				margin-bottom: 10px;
			}
		}
	}
}


/*
 *
 * Assignment and Choices related classes
 *
 * */

.assignment-intro,
.assignment-previous-submission,
.assignment-chosen-files-list,
.choice-intro,
.choice-status,
.activity-dates {
	background-color: white;
	padding: 5px;
	padding-top: 10px;
	padding-bottom: 10px;
}

.activity-dates {
	margin-top: 10px;
}

.assignment-chosen-files-list div.file-entry {
	margin-bottom: 5px;
}

.assignment-previous-submission,
.choice-status {
	margin-top: 10px;
}

.fileslot-filename {
	padding-top: 15px;
	padding-left: 10px;
	font-weight: bold;
	color: gray;
	font-style: italic;
}

/*
 *
 * Assign and Assignment related classes
 *
 * */
.assignment{
	.intro {
		background-color: white;
		padding: 5px;
		padding-top: 10px;
		padding-bottom: 10px;
	}
	
	.dates,
	.last-submission {
		margin-top: 10px;
		background-color: white;
		padding: 5px;
		padding-top: 10px;
		padding-bottom: 10px;
	}

	.toosoon,
	.toolate,
	.noresubmit,
	.lastsubmissionwasfinal {
		padding-top: 10px;
		padding-bottom: 10px;
		background-color: white;
		color: red;
		text-align: center;
		font-weight: bold;
	}
}

/*
 *
 * Page related classes
 *
 * */
.page{
	.name {
		font-weight: bold;
	}

	.name,
	.intro,
	.content {
		margin-top: 10px;
		background-color: white;
		padding: 5px;
		padding-top: 10px;
		padding-bottom: 10px;
	}
}

.progress-bar {
	text-align: left;
	background-color: #333333;
	height: 25px;
	width: 100%;
	margin: 50px 0;			
	-webkit-border-radius: 5px;
	border-radius: 5px;
	-webkit-box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
	box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;	          
}

.progress-bar span {
	display: inline-block;
	background-color: white;
	height: 100%;	
	-webkit-border-radius: 3px;
	border-radius: 3px;
	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
	box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
    -webkit-transition: width .4s ease-in-out;
    transition: width .4s ease-in-out;    
}

